@@ -29,8 +29,6 @@ EXTRA_DIST = config.rpath autogen.sh \
 	     depcomp \
 	     CREDITS
 
-noinst_HEADERS = config.h
-
 CONFIG_CLEAN_FILES = libtool
 
 docs:
@@ -84,7 +82,7 @@ install-data-hook:
 
 mostlyclean-generic:
 	-rm -f *~ \#* .*~ .\#* 
-	-rm -f $(PACKAGE)_$(VERSION).tar.gz
+	-rm -f $(PACKAGE)_$(VERSION).tar.gz $(PACKAGE)_$(VERSION).tar.bz2
 	-rm -f $(distdir).tar.gz $(PACKAGE).tgz package_descriptions
 	-rm -rf $(distdir)
 
@@ -93,7 +91,7 @@ maintainer-clean-generic:
 	-@echo "This command is intended for maintainers to use;"
 	-@echo "it deletes files that may require special tools to rebuild."
 	-rm -f Makefile.in configure acinclude.m4 aclocal.m4
-	-rm -f config.h.in stamp-h.in ltconfig ltmain.sh
+	-rm -f stamp-h.in ltconfig ltmain.sh
 	-rm -f config.guess config.sub install-sh missing mkinstalldirs
 	-rm -f depcomp config.log
 
