@@ -81,6 +81,8 @@
 
 #include <inttypes.h>
 #include <pthread.h>
+#include "../src/xine-utils/attributes.h"
+
 
 #if defined(WIN32) || defined(__CYGWIN__)
 #  define XINE_PATH_SEPARATOR_STRING ";"
